--- a/WebContent/ngMessageForm.html
+++ b/WebContent/ngMessageForm.html
@@ -36,6 +36,19 @@ body {
 				<div ng-messages-include="template/emailmessages.html"></div>
 			</div>
 		</div>
+		<div class="form-group"
+			ng-class="{'has-error':userForm.password.$touched && userForm.password.$invalid}">
+			<label>密码</label> <input type="password" name="password"
+				class="form-control" ng-model="main.password" ng-minlength="5"
+				ng-maxlength="20" required />
+
+			<div class="help-block" ng-messages="userForm.password.$error"
+				ng-if="userForm.password.$touched">
+				<p ng-message="minlength">密码最小长度5</p>
+				<p ng-message="maxlength">密码最大长度10</p>
+				<p ng-message="required">密码必填</p>
+			</div>
+		</div>
 		<div class="form-group">
 			<button type="submit" class="btn btn-danger">提交</button>
 		</div>
