--- a/WebContent/template.html
+++ b/WebContent/template.html
@@ -10,11 +10,11 @@
 	<div ng-controller="MainController">
 	<!-- 注意前面的“#”号 -->
   Choose:
-  <a href="#Book/Moby">Moby</a> |
-  <a href="#Book/Moby/ch/1">Moby: Ch1</a> |
-  <a href="#Book/Gatsby">Gatsby</a> |
-  <a href="#Book/Gatsby/ch/4?key=value">Gatsby: Ch4</a> |
-  <a href="#Book/Scarlet">Scarlet Letter</a><br/>
+  <a href="#/Book/Moby">Moby</a> |
+  <a href="#/Book/Moby/ch/1">Moby: Ch1</a> |
+  <a href="#/Book/Gatsby">Gatsby</a> |
+  <a href="#/Book/Gatsby/ch/4?key=value">Gatsby: Ch4</a> |
+  <a href="#/Book/Scarlet">Scarlet Letter</a><br/>
 
   <div ng-view></div>
 
