--- a/WebContent/ajax.html
+++ b/WebContent/ajax.html
@@ -11,7 +11,7 @@
 </head>
 <body ng-app="PeopleModule" class="container">
 	<h2 class="text-center">AngularJS Sample Application</h2>
-	<div ng-app="ajax" ng-controller="StudentController">
+	<div  ng-controller="StudentController">
 		<table class="table table-condensed table-hover table-bordered table-striped">
 			<tr>
 				<th class="text-center">Name</th>
