--- a/WebContent/service.html
+++ b/WebContent/service.html
@@ -7,9 +7,15 @@
 	href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body class="container" ng-app="myApp">
-<div ng-Controller="serviceController">
-	<button ng-click="sayHello()">Hello</button>
-</div>
+	<div ng-Controller="serviceController">
+		<label for="username">input a username</label> 
+		<input type="text"
+			ng-model="username" placeholder="enter a username"></input>
+		<ul class="list-group col-md-offset-3 col-md-6">
+			<li ng-repeat="person in persons" class="list-group-item"><span
+				class="badge">14</span> {{person.Name}} lives in {{ person.RollNo }}</li>
+		</ul>
+	</div>
 	<script src="node_modules/angular/angular.min.js"></script>
 	<script src="js/service.js"></script>
 </body>
